# agent-testing

./: .gitignore  README.md  pyproject.toml  requirements.txt  review_config.yaml
.github/workflows/: ai-code-review.yml
sample-app/: README.md  app.js  index.html  styles.css
src/air_review/: __init__.py  config.py  diff_processor.py  formatter.py  gemini_client.py  github_client.py  main.py  prompts.py  review_blocks.py
testing/: README.md  app.js  index.html  styles.css
tests/: test_diff_processor.py  test_formatter.py  test_prompts.py
