[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "air-review"
version = "0.1.0"
description = "AI code review agent for GitHub PRs using Gemini"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "PyGithub>=2.5.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
air-review = "air_review.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
